<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Advanced settings</string>

    <string name="category_s2w_title">Sweep2Wake</string>
    <string name="s2w_switch_title_head">Enable sweep to wake</string>
    <string name="s2w_switch_summary_head">Switch phone screen on/off with a swipe over the capacitive buttons</string>
    <string name="s2w_stroke_title_head">Direction</string>
    <string name="s2w_stroke_summary_head">Set to "Direction dependent" to allow only a left-to-right swipe for turning on and a right-to-left swipe for turning off</string>
    <string name="s2w_length_title_head">Minimum Length</string>
    <string name="s2w_length_summary_head">Set the number of buttons that are needed to be swiped over for switching screen on/off</string>
    <string name="category_s2w_double_tap_title">DoubleTap2Wake</string>
    <string name="s2w_double_tap_wake_title_head">Enable double tap to wake</string>
    <string name="s2w_double_tap_wake_summary_head">Switch phone screen on with a double tap on the lower screen area</string>
    <string name="s2w_double_tap_duration_title_head">Double tap duration</string>
    <string name="s2w_double_tap_duration_summary_head">Minimal duration in ms between two taps to turn screen on</string>

    <string name="category_usb_title">USB</string>
    <string name="fastcharge_title_head">Fast Charge</string>
    <string name="fastcharge_summary_head">Enable to draw more power when connected to a PC USB port</string>

    <string name="category_backlightdisable_title">Backlight</string>
    <string name="backlightdisable_title_head">Disable Button Backlight</string>
    <string name="backlightdisable_summary_head">Select to disable the capacitive button backlight</string>
    <string name="backlightnotification_title_head">Button Backlight Notification</string>
    <string name="backlightnotification_summary_head">Select to enable the capacitive button backlight for notification events</string>

    <string name="backlightbrightness_title_head">Button Backlight Brightness</string>
    <string name="backlightbrightness_summary_head">Set the brightness for the capacitive button</string>

    <string name="slowblinkbrightnesslimit_title_head">Notification Brightness</string>
    <string name="slowblinkbrightnesslimit_summary_head">Select to limit notification brightness to button brightness</string> 
    
    <string name="category_smartdimmer_title">nVidia SmartDimmer</string>
    <string name="smartdimmer_switch_title_head">Enable</string>
    <string name="smartdimmer_switch_summary_head">Switch nVidia SmartDimmer on/off (switching on saves battery life with less backlight and more contrast/colors, switching off should give brighter LCD backlight)</string>

    <string name="category_touchscreen">Touchscreen</string>
    <string name="calibration_control_title_head">Calibration Control</string>
    <string name="calibration_control_summary_head">Disable to fix multitouch issues</string>
</resources>
