<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<!-- defaultValues need to be in sync with the default kernel values! -->

	<PreferenceCategory
    	android:title="@string/category_s2w_title">
	    <!-- s2w switch Options -->
	    <CheckBoxPreference
	        android:key="s2w_switch"
	        android:title="@string/s2w_switch_title_head"
	        android:summary="@string/s2w_switch_summary_head" />
	    <!-- s2w stroke Options -->
	    <ListPreference
	        android:key="s2w_stroke"
	        android:title="@string/s2w_stroke_title_head"
	        android:summary="@string/s2w_stroke_summary_head"
            android:dependency="s2w_switch"
	        android:entries="@array/s2w_stroke_entries"
	        android:entryValues="@array/s2w_stroke_entries_values" />
`		<!-- s2w min length -->
	    <ListPreference
	        android:key="s2w_length"
	        android:title="@string/s2w_length_title_head"
	        android:summary="@string/s2w_length_summary_head"
            android:dependency="s2w_switch"
	        android:entries="@array/s2w_length_entries"
	        android:entryValues="@array/s2w_length_entries_values" />
	</PreferenceCategory>
	
	<PreferenceCategory
    	android:title="@string/category_s2w_double_tap_title">
	    <!-- s2w dopuble tap Options -->
	    <CheckBoxPreference
	        android:key="s2w_double_tap_wake"
	        android:title="@string/s2w_double_tap_wake_title_head"
	        android:summary="@string/s2w_double_tap_wake_summary_head" />
`		<!-- s2w min length -->
	    <ListPreference
	        android:key="s2w_double_tap_duration"
	        android:title="@string/s2w_double_tap_duration_title_head"
	        android:summary="@string/s2w_double_tap_duration_summary_head"
                android:dependency="s2w_double_tap_wake"
	        android:entries="@array/s2w_double_tap_duration_entries"
	        android:entryValues="@array/s2w_double_tap_duration_values" />
	    <!-- Calibration Control Option -->
	    <CheckBoxPreference
	        android:key="calibration_control"
	        android:title="@string/calibration_control_title_head"
	        android:summary="@string/calibration_control_summary_head"
                android:dependency="s2w_double_tap_wake" />
	</PreferenceCategory>

	<PreferenceCategory
	android:title="@string/category_backlightdisable_title">
	    <!-- Backlight Disable Options -->
	    <CheckBoxPreference
	        android:key="backlight_disable"
	        android:title="@string/backlightdisable_title_head"
	        android:summary="@string/backlightdisable_summary_head" />
	    <!-- Backlight Brightness Option -->
	    <ListPreference
	        android:key="backlight_brightness"
	        android:title="@string/backlightbrightness_title_head"
	        android:summary="@string/backlightbrightness_summary_head"
	        android:entries="@array/backlightbrightness_entries"
	        android:entryValues="@array/backlightbrightness_entries_values" />
	    <!-- Backlight Notification Option -->
            <CheckBoxPreference
                android:key="backlight_notification"
                android:title="@string/backlightnotification_title_head"
                android:summary="@string/backlightnotification_summary_head" />
            <!-- Slow Blinking Light limiter Options -->
            <CheckBoxPreference
                android:key="slow_blink_brightness_limit"
                android:dependency="backlight_notification"
                android:title="@string/slowblinkbrightnesslimit_title_head"
                android:summary="@string/slowblinkbrightnesslimit_summary_head" /> 

	</PreferenceCategory>

	<PreferenceCategory
	android:title="@string/category_smartdimmer_title">
	    <!-- SmartDimmer Switch Options -->
	    <CheckBoxPreference
	        android:key="smartdimmer_switch"
	        android:title="@string/smartdimmer_switch_title_head"
	        android:summary="@string/smartdimmer_switch_summary_head" />
	</PreferenceCategory>
</PreferenceScreen>
